objects/Contract_Integrated_Accounts__c.object
<CustomObject>
    <description>CONTROLLED SOX FIELD. CHANGES TO FIELDS REQUIRE PRIOR APPROVAL FROM FINANCE OPS.</description>
    <fields>
        <fullName>Account_Legal_Name__c</fullName>
        <formula>Account__r.ffex__LegalName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Legal Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>CONTROLLED SOX FIELD. CHANGES TO FIELDS REQUIRE PRIOR APPROVAL FROM FINANCE OPS.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Contract Integrated Accounts</relationshipLabel>
        <relationshipName>Contract_Integrated_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract_End__c</fullName>
        <formula>Contract__r.End__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Negotiated_Amount__c</fullName>
        <formula>Contract__r.Negotiated_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Negotiated Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contract_Start__c</fullName>
        <formula>Contract__r.Start__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Status__c</fullName>
        <formula>text(Contract__r.Status__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>CONTROLLED SOX FIELD. CHANGES TO FIELDS REQUIRE PRIOR APPROVAL FROM FINANCE OPS.</description>
        <label>Contract ABC</label>
        <referenceTo>Contract__c</referenceTo>
        <relationshipLabel>Contract Integrated Accounts</relationshipLabel>
        <relationshipName>Contract_Integrated_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract_s_Annual_Contract_Value__c</fullName>
        <formula>Contract__r.Annual_Contract_Value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract&apos;s Annual Contract Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contracting_Institution__c</fullName>
        <formula>IF(RecordType.Name == &apos;Standard Contract&apos;,  LOA_Contract__r.Account.ffex__LegalName__c ,
IF(RecordType.Name == &apos;Contract ABC&apos;,  Contract__r.Payer_Account__r.ffex__LegalName__c ,
&apos;&apos;))</formula>
        <inlineHelpText>The Institution that owns the contract</inlineHelpText>
        <label>Contracting Institution</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Integrated_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Integrated Account</label>
        <referenceTo>Integrated_Account__c</referenceTo>
        <relationshipLabel>Contract Integrated Accounts</relationshipLabel>
        <relationshipName>Contract_Integrated_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LOA_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>CONTROLLED SOX FIELD. CHANGES TO FIELDS REQUIRE PRIOR APPROVAL FROM FINANCE OPS</description>
        <inlineHelpText>Parent LOA Contract</inlineHelpText>
        <label>LOA Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Contract Integrated Accounts</relationshipLabel>
        <relationshipName>Contract_Integrated_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Contract Integrated Account</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contract Integrated Accounts</pluralLabel>
    <recordTypes>
        <fullName>Contract_ABC</fullName>
        <active>true</active>
        <description>Used to link an Integrated Account record to a Contract ABC record</description>
        <label>Contract ABC</label>
    </recordTypes>
    <recordTypes>
        <fullName>Legacy</fullName>
        <active>true</active>
        <description>Used for existing CIA records before the existance of the Integrated Account object</description>
        <label>Legacy</label>
    </recordTypes>
    <recordTypes>
        <fullName>Standard_Contract</fullName>
        <active>true</active>
        <description>Used to link an Integrated Account record to a standard Contract record generated by SteelBrick</description>
        <label>Standard Contract</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>